fix bug in stats, added tests and updated xmhw_demo notebook

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = xmhw 
 author = Paola Petrelli
-author-email = paola.petrelli@utas.edu.au
+author_email = paola.petrelli@utas.edu.au
 summary = 'marine heatwave detection code using xarray' 
-description-file = README.rst
+description_file = README.rst
 licence = 'Apache 2.0'
 classifier =
     Development Status :: 3 - Alpha
@@ -35,8 +35,8 @@ dev =
 #console_scripts =
 
 [build_sphinx]
-source-dir = docs
-build-dir = docs/_build
+source_dir = docs
+build_dir = docs/_build
 
 [tool:pytest]
 addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore docs/conf.py
