added documents, merged with conda branch

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,10 @@
 name = xmhw 
 author = Paola Petrelli
 author_email = paola.petrelli@utas.edu.au
-summary = 'marine heatwave detection code using xarray' 
+summary = 'Marine heatwave detection code using xarray' 
 description_file = README.rst
 licence = 'Apache 2.0'
+keywords = 'heatwave'
 classifier =
     Development Status :: 3 - Alpha
     Environment :: Console
@@ -12,27 +13,28 @@ classifier =
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9 
+
+[options]
+install_requires=
+    xarray
+    numpy
+    pandas
+    dask
+
+python_requires=
+    '>=3.7'
 
 [files]
 packages = 
     xmhw 
-#package-data =
-#    mhw = data/*json
 
 [pbr]
 autodoc_tree_index_modules = True
 autodoc_tree_excludes =
     setup.py
-    tests
-
-[extras]
-# Optional dependencies
-dev = 
-    pytest
-    sphinx
-
-[entry_points]
-#console_scripts =
+    test
 
 [build_sphinx]
 source_dir = docs
