--- a/conda/meta.yml
+++ b/conda/meta.yml
@@ -1,22 +1,20 @@
+{% set version = "0.7.0" %}
 package:
     name: xmhw 
-    version: {{ GIT_DESCRIBE_TAG }}
+    version: {{ version }}
 
 build:
     number: {{ GIT_DESCRIBE_NUMBER }}
 
 source:
-    git_url: ../
-
-build:
-    noarch: python
-    script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed"
+     
+    url:  https://github.com/coecms/xmhw/archive/refs/tags/{{version}}.tar.gz 
 
 requirements:
     host:
         - python
-        - pip
-        - pbr
+    build:
+        - python
     run:
         - python
         - pandas
@@ -33,6 +31,7 @@ test:
         - numpy
         - xarray
         - pandas
+        - dask
     imports:
         - xmhw
 
