removed old xmhw_demo and ad dingore docs/conf.py to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ autodoc_tree_index_modules = True
 autodoc_tree_excludes =
     setup.py
     test
+    docs/conf.py
 
 [build_sphinx]
 source_dir = docs
