--- a/.github/workflows/xmhw-conda.yml
+++ b/.github/workflows/xmhw-conda.yml
@@ -1,6 +1,14 @@
 name: xmhw-conda-install-test
 
-on: [push]
+#on: [push]
+on: 
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
 
 jobs:
   build-linux:
@@ -20,7 +28,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file conda/environment.yml 
+        conda env update --file conda/environment.yml --name base 
     - name: Lint with flake8
       run: |
         conda install flake8
