changed from pytest to python -m pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author_email = paola.petrelli@utas.edu.au
 summary = 'Marine heatwave detection code using xarray' 
 description_file = README.rst
 licence = 'Apache 2.0'
-keywords = 'heatwave'
+keywords = 'marine heatwave'
 classifier =
     Development Status :: 3 - Alpha
     Environment :: Console
@@ -22,7 +22,6 @@ install_requires=
     numpy
     pandas
     dask
-    datetime
 tests_require=
     netCDF4
 
