--- a/.github/workflows/xmhw-conda.yml
+++ b/.github/workflows/xmhw-conda.yml
@@ -37,13 +37,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Install package 
-      run: |
-        conda run python setup.py install
+        #    - name: Install package 
+      #      run: |
+              #        conda run python setup.py install
     - name: Test with pytest
       run: |
         conda install pytest coverage codecov
-        conda run pytest
+        conda run python -m pytest
         conda run coverage run --source xmhw -m py.test
         after_success:
         x- codecov
