--- a/.github/workflows/xmhw-conda.yml
+++ b/.github/workflows/xmhw-conda.yml
@@ -45,10 +45,12 @@ jobs:
         conda install pytest coverage codecov
         conda run python -m pytest
         conda run coverage run --source xmhw -m py.test
-        if: steps.build.outcome == 'success'
+    - name: Upload to codecov 
+      if: steps.build.outcome == 'success'
+        run:
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov
-        # codeclimate-test-reporter specifi to python is deprecated and as been replaced by a binary
+          # codeclimate-test-reporter specifi to python is deprecated and as been replaced by a binary
         # curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
 
