--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
 [metadata]
 name = xmhw 
+url = https://github.com/coecms/xmhw
 author = Paola Petrelli
 author_email = paola.petrelli@utas.edu.au
 summary = 'Marine heatwave detection code using xarray' 
 description_file = README.rst
-licence = 'Apache 2.0'
+licence = 'Apache-2.0'
 keywords = 'marine heatwave'
 classifier =
     Development Status :: 3 - Alpha
@@ -15,17 +16,18 @@ classifier =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9 
+    Programming Language :: Python :: 3.10 
 
 [options]
-install_requires=
+install_requires =
     xarray
     numpy
     pandas
     dask
-tests_require=
+tests_require =
     netCDF4
 
-python_requires=  >= 3.6.9
+python_requires =  >= 3.7
 
 [files]
 packages = 
