--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = xmhw 
 url = https://github.com/coecms/xmhw
+version = 0.8.0
 author = Paola Petrelli
 author_email = paola.petrelli@utas.edu.au
 summary = 'Marine heatwave detection code using xarray' 
@@ -18,16 +19,6 @@ classifier =
     Programming Language :: Python :: 3.9 
     Programming Language :: Python :: 3.10 
 
-[options]
-install_requires =
-    xarray
-    numpy
-    pandas
-    dask
-tests_require =
-    netCDF4
-
-python_requires =  >= 3.7
 
 [files]
 packages = 
