--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Add general dependencies here
 # Optional dependencies e.g. [dev] are added in `setup.cfg`
-xarray >= 0.16.0
+# temporarily pinning xarray as latest version (22.06.0) has a bug with reindex
+xarray >= 0.16.0, <= 2022.03.0
 pandas
 numpy
 dask
