--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -29,7 +29,8 @@ requirements:
         - dask 
 
 source:
-    url:  https://github.com/coecms/xmhw/archive/refs/tags/{{version}}.tar.gz 
+    git_url:  https://github.com/coecms/xmhw.git 
+    git_rev: 0.9.0
 
 build:
     script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed"
